# toy_db

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
src/: buffer.rs  catalog.rs  cli.rs  disk.rs  execution.rs  lib.rs  main.rs  parser.rs  value.rs
src/catalog/: column.rs  mod.rs  schema.rs
src/common/: config.rs
src/parser/: ast.rs  mod.rs  token.rs
src/storage/: disk.rs  mod.rs  page.rs  table.rs  tuple.rs
src/storage/page/: mod.rs  table_page.rs
src/value/: mod.rs
