[package]
name = "toy_db"
version = "0.1.0"
authors = ["naotaka nakane <n.nakane0219@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rand = "0.8.0"
signal-hook = "0.3.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
serde_json = "1.0"
